Changes to use UnitType and GoodsType in more classes